--- a/web/themes/citizen_patterns/components/_patterns/02-molecules/menus/breadcrumbs/_breadcrumbs.scss
+++ b/web/themes/citizen_patterns/components/_patterns/02-molecules/menus/breadcrumbs/_breadcrumbs.scss
@@ -12,11 +12,15 @@
 
 	li{
 		display: inline-block;
-		color: $darkGrey;
+		color: $breadCurrent;
 		@include xSmaller;
 		a{
 			padding-right: .5rem;
 			@include transAll(.3s);
+			color: $breadLink;
+			&:hover,&:focus{
+				color: $breadLinkHover;
+			}
 		}
 		&:not(:last-of-type){
 			&:after{
