--- a/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/01-footer/_site-footer.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-organisms/02-layout/01-footer/_site-footer.scss
@@ -2,10 +2,10 @@
    SITE FOOTER
 =============== */
 footer {
-	background: $darkGrey;
-	color: $offWhite;
+	background: $footerBack;
+	color: $footerText;
 	.modal-content{
-		color: $body;
+		color: $baseText;
 	}
 	//set style for footer (need inner for fixed footer script)
 	.footer-inner{
