--- a/web/themes/citizen_patterns/components/_patterns/00-base/_01-mixins.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/_01-mixins.scss
@@ -148,7 +148,7 @@
 		display: block;
 		width: 100%;
 		height: 100%;
-		background: $imgOverlay;
+		background: $transTint;
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -160,7 +160,7 @@
 @mixin imageHover{
 	border: 1px solid $lightGrey;
 	&:hover,&:focus{
-		border-color: $darkGrey;
+		border-color: $borderRule;
 		opacity: .7;
 		@include transAll(.3s);
 	}
